--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+     <img src="/home/cynthia/Downloads/lion.jpg" />
+     <img 
+        src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+        alt="lion.png"
+     />
+     <img 
+        src="/home/cynthia/Downloads/lion.jpg"
+        alt="lion.png"
+         title="King of the Jungle"
+     />   
   </body>
 </html>
